2007-06-16 Jens Tkotz <jens@peino.de> 1.5.7-svn-b6

 * Change: More changes according to wz_tooltips v4

2007-06-16 Jens Tkotz <jens@peino.de> 1.5.7-svn-b5

 * Change: wz_tooltip.js    v. 4.02

2007-06-06 Jens Tkotz <jens@peino.de> 1.5.7-svn-b4

 * Change: Remove unneeded param $pathToResized from
           Album::resizeAllPhotos

 * Fix: Correct call of the method above.

2007-05-23 Jens Tkotz <jens@peino.de> 1.5.7-svn-b3

 * Fix: Unquoted indexes in ecardform

 * Fix: Wrong trigger for default email_sender in ecardform.

2007-05-23 Jens Tkotz <jens@peino.de> 1.5.7-svn-b2

 * New: In Joomla! and Mambo you can now enter which userlevel
        is allowed to create rootalbums.
        Uninstall/install of component required.

 * New: Method canCreateRootAlbum() for joomla/mambo user

2007-05-03 Jens Tkotz <jens@peino.de> 1.5.7-svn-b1

 * Fix: Little Typo

 * Change: use @ before mkdir in platform/*

2007-04-03 Chris Kelly <ckdake@ckdake.com> 1.5.6

 * Release: 1.5.6

2007-04-03 Jens Tkotz <jens@peino.de> 1.5.6-svn-b24

 * Change: Removed classes/php-gettext

 * Fix: Added svn ID to a couple of files.

 * Fix: Updated Manifest file.

2007-03-22 Jens Tkotz <jens@peino.de> 1.5.6-svn-b23

 * Fix: Search throwed a warning for albums without highlight.

2007-03-22 Jens Tkotz <jens@peino.de> 1.5.6-svn-b22

 * Fix: Htmlfix in b21 broke image area links.

   Thanks again to Ajuniper.

 * Fix: No empty tooltip if no hovertext is given.

2007-03-21 Jens Tkotz <jens@peino.de> 1.5.6-svn-b21

 * Fix: Quotes (single and double) and backslash were not quoted in
        imagemap.

   Thanks to Ajuniper from forum.

 * Fix: Little HTMLfixes in imagemap.

2007-03-09 Jens Tkotz <jens@peino.de> 1.5.6-svn-b20

 Fix: Removed PHP warning in edit_appearance

2007-03-05 Jens Tkotz <jens@peino.de> 1.5.6-svn-b19

 * Fix/Change: Added new functionality to rebuild capture dates.
               This makes it possible to fix broken dates, and also